--- a/design.css
+++ b/design.css
@@ -58,12 +58,6 @@ nav ul li a:hover {
   background: linear-gradient(120deg, #81ecec, #74b9ff);
   border-radius: 0 0 40px 40px;
 }
-
-.t {
-  flex: 1 1 400px;
-  animation: fadeIn 1.2s ease-in-out;
-}
-
 .t h1 {
   font-size: 3rem;
   margin-bottom: 15px;
@@ -78,13 +72,13 @@ nav ul li a:hover {
 .t form {
   display: flex;
   gap: 10px;
-  flex-wrap: wrap;
+  
 }
 
 .t input {
   flex: 1;
   padding: 12px;
-  border: none;
+  border: bold;
   border-radius: 8px;
   outline: none;
 }
@@ -227,20 +221,6 @@ nav ul li a:hover {
 }
 
 
-
-@media (max-width: 768px) {
-  .h {
-    flex-direction: column;
-    text-align: center;
-  }
-  nav ul {
-    flex-direction: column;
-    align-items: center;
-  }
-  nav ul li {
-    margin: 10px 0;
-  }
-}
 .rules{
   color: #460da9;
   padding: 60px;
