--- a/design.css
+++ b/design.css
@@ -15,7 +15,7 @@ header {
   justify-content: space-between;
   align-items: center;
   background: red;
-  color:black;
+
   padding: 15px 30px;
   position: sticky;
   top: 0;
@@ -80,11 +80,6 @@ nav ul li a:hover {
     color: #444;
     max-width: 600px; 
 }
-
-
-
-
-
 
 .i img {
   max-width: 300px;
@@ -193,7 +188,28 @@ nav ul li a:hover {
   box-shadow: 0 6px 15px rgba(0,0,0,0.1);
 }
 
+.page form input,
+.page form textarea {
+  padding: 12px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
 
+.page form button {
+  padding: 12px;
+  background: linear-gradient(90deg, #00b894, #0984e3);
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 600;
+  transition: background 0.3s;
+}
+
+.page form button:hover {
+  background: linear-gradient(90deg, #019874, #076dc4);
+}
 
 
 .rules{
